# stablepay-hackathon

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  renovate.json
.claude/: settings.json
backend/: .dockerignore  .gitignore  Dockerfile  build.gradle.kts  gradle.properties  settings.gradle.kts
docs/: ADR.md  BACKEND_TESTING_GUIDE.md  BRAINSTORM.md  CODING_STANDARDS.md  COMPETITIVE_ANALYSIS.md  E2E_10_CUSTOMER_RUN.md  E2E_DEVNET_TEST_LOG.md  E2E_FLOW.md  E2E_VISUAL_STORY.md  FE_ARCHITECTURE_STANDARDS.md  FE_CODING_STANDARDS.md  FE_TESTING_STANDARDS.md  ROADMAP.md  SOLANA_ACCOUNTING_MODEL.md  SOLANA_CODING_STANDARDS.md  StablePay.postman_collection.json  TESTING_STANDARDS.md  openapi.json
e2e-tests/: package-lock.json  package.json
mpc-sidecar/: .dockerignore  Dockerfile  go.mod  go.sum
programs/stablepay-escrow/: Cargo.toml  libtest_local_file.dylib
programs/stablepay-escrow/src/: constants.rs  errors.rs  lib.rs
programs/stablepay-escrow/src/instructions/: cancel.rs  claim.rs  deposit.rs  mod.rs  refund.rs
programs/stablepay-escrow/src/state/: escrow.rs
scripts/: e2e_10_customers.py
stablepay-design-system/: README.md
tasks/: plan.md  todo.md
test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
tests/: stablepay-escrow.ts
web-app/: .dockerignore  .env.local.example  CLAUDE.md  Dockerfile  biome.json  next.config.ts  package.json  playwright.config.ts  tsconfig.json  (+1 more)
(+668 files in other folders)
